--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 	<h1> hello coursera ! its a great course </h1>
-	<h2> hello how are you </h2>
+	<h2> hello how are you  he is a good guy</h2>
+	<h3> hello couresa </h3>
 </body>
 </html>
