--- a/site/hello.html
+++ b/site/hello.html
@@ -1,7 +1,24 @@
+<!doctype html>
 <html>
 <head>
-	</head>
-	<body>
-		<h1 style="color : red ; text-align : center ;"
-	</body>
+	<meta charset="utf-8"
+	<title> Coursera is cool !</title>
+</head>
+<body>
+	<div> Dear all,
+		<span> I took thias really cool course 
+		</span> </div>
+		<span> on coursera.org i think it's my favorite course i ,ve ever taken
+			here ia th url for it :
+		</span>
+		<a href= "..."> html .css and js for web developers </a>
+		<div>
+			Does anyone know I can give this course 6 out of 5 stars ?
+		</div>
+		<div>
+			thank you,
+			--neha sharma ... I mean a random student ! definitely not Neha Sharma .
+		</div>
+
+</body>
 </html>
